--- a/about.html
+++ b/about.html
@@ -14,11 +14,11 @@
     <title>Code Space</title>
   </head>
   <body>
-    <header class="header px-lg-5 px-md-3 pt-3">
+    <header class="bg-primary px-lg-5 px-md-3 pt-3 h-100">
       <div class="container-fluid">
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg navbar-light shadow-none mb-5">
-          <a class="navbar-brand fw-bold fs-3 text-primary" href="#"
+          <a class="navbar-brand fw-bold fs-3 text-white" href="#"
             >Code Space</a
           >
           <button
@@ -36,14 +36,14 @@
             <ul class="navbar-nav ms-auto">
               <li class="nav-item">
                 <a
-                  class="nav-link text-primary fw-bold"
+                  class="nav-link  fw-bold"
                   aria-current="page"
-                  href="#"
+                  href="/index.html"
                   >Home</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link text-dark" href="/about.html">About</a>
+                <a class="nav-link text-white text-dark" href="#">About</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-dark" href="#">Teams</a>
@@ -58,130 +58,31 @@
           </div>
         </nav>
         <!-- End of Navbar -->
-
-        <!-- Hero -->
-        <div class="row">
-          <div class="col-lg-6 col-md-12">
-            <h4 class="fw-bold text-dark mb-2">/ 01</h4>
-            <h1 class="text-dark fw-bold">
-              We Don't Just <span class="text-primary">Write Codes</span>.
-              <br />
-              We Build <span class="text-primary">Brands</span>.
-            </h1>
-            <img
-              draggable="false"
-              class="mt-2 mb-3 img-responsive"
-              src="./img/line.png"
-              style="width: 350px"
-            />
-            <p class="text-dark">
-              &copy;CODESPACE is a Platform that aims to build a community for
-              teenagers. The platform aims to show the world how ready and
-              capable We teenagers are to rewrite the African narrative through
-              technology. The platform further exists as a tech-based freelance
-              portal that bridges the gap between companies and tech gurus.
-            </p>
-
-            <div>
-              <div class="d-flex mt-5">
-                <p class="text-dark">Follow Us</p>
-
-                <div class="social-icons ms-3">
-                  <a href="#">
-                    <img draggable="false" src="./img/instagram.png" alt="" />
-                  </a>
-                  <a href="#">
-                    <img
-                      draggable="false"
-                      class="ms-2"
-                      src="./img/youtube.png"
-                      alt=""
-                    />
-                  </a>
-                  <a href="#">
-                    <img
-                      draggable="false"
-                      class="ms-2"
-                      src="./img/dribbble.png"
-                      alt=""
-                    />
-                  </a>
-                </div>
-              </div>
-            </div>
-
-            <div class="call-to-action mt-4 pb-4">
-              <button
-                class="btn btn-primary btn-lg fw-bold shadow-none custom-btn"
-              >
-                Discover More
-              </button>
-
-              <button
-                class="btn ms-lg-3 mt-3 mt-lg-0 mt-sm-0 fw-bold shadow-none custom-btn btn-outline-dark"
-              >
-                Join The Community
-              </button>
-            </div>
-          </div>
-
-          <div class="col-lg-6 col-md-12 mt-lg-0 mb-lg-0 mt-3 mb-3">
-            <img
-              draggable="false"
-              class="img-responsive mw-100"
-              src="./img/cover.png"
-              alt=""
-            />
-          </div>
+        <div class="text-white text-center p-5">
+          <h2 class="fw-bold">About Us</h2>
+          <small class="w-23">Agency provides a full service range including technical<br> skills, design, business understanding.</small>
         </div>
+      </header>
+
+      <div class="container px-3 py-5">
+        <h4 class="text-primary mt-5 fw-light">ABOUT</h4>
+        <h2 class="text-black fw-bold">An Experience<br> Design Agency</h2>
+      <div class="d-flex flex-column flex-lg-row mt-5 text-black">
+          <img 
+          src="./img/svg/bitmap.svg" 
+          alt="bitmap" 
+          draggable="false"
+          class="mw-50 mw-100 mr img-responsive"
+        >
+        <p>CODESPACE is a Platform that aims to build a community for teenagers. The platform aims to show the world how ready and capable We teenagers are to rewrite the African narrative through technology.</p>
       </div>
-    </header>
-
-    <div class="container-fluid bg-primary">
-      <div class="card-body d-flex mx-auto">
-        <div class="row c-section">
-          <div class="col-lg-4 col-md-6 mb-lg-0 mb-xl-0 mb-3">
-            <img
-              draggable="false"
-              class="mw-100 img-responsive"
-              src="./img/clinton.png"
-              alt=""
-            />
-          </div>
-          <div class="col-lg-7 col-md-6 ms-lg-5 mt-sm-4 text-white">
-            <h2 class="fw-bold">Clinton .E. Imaro</h2>
-            <p class="text-light">CEO of Code Space</p>
-            <p class="fs-6">
-              Clinton Imaro is a student and a Nigerian from Benin City, Edo
-              State, with an undying passion for the creative and technology
-              industry. He is a self-taught Programmer, Story Teller, Filmmaker,
-              Editor and Tech Content Creator. He is passionate about edtech
-              advocacy and looks forward to becoming a Future Skills Activist.
-            </p>
-            <p class="mt-4 fs-6">
-              He is also the founder of Code Space and Afro Now. Code Space is a
-              platform that aims to build a community for teenagers. Founded in
-              2020 because of his love for early teaching tech skills to young
-              people, the platform aims to show the world how ready and capable
-              these teenagers are to rewrite the African narrative through
-              technology. The platform further exists as a tech-based freelance
-              portal that bridges the gap between companies and tech gurus.
-            </p>
-          </div>
-        </div>
       </div>
-    </div>
-
-    <div class="bg-light">
-      <div class="team pb-5 pt-5">
-        <div class="container">
-          <p class="text-primary">Our Team</p>
-          <h1 class="ep fw-bold mb-5 text-dark">
-            Our Team of Designers <br />
-            and Developers
-          </h1>
-
-          <div class="owl-carousel owl-theme">
+   
+      <div class="container-fluid bg-primary text-white">
+        <div class="p-5">
+        <h4 class="">OUR TEAM</h4>
+       <h2 class="fw-bold">Team of Designers<br> and Developers</h2>
+       <div class="owl-carousel owl-theme">
             <div>
               <img
                 draggable="false"
@@ -189,8 +90,8 @@
                 src="./img/team1.png"
                 alt=""
               />
-              <p class="mt-3 fw-bold text-dark fs-4">Tayyib Gbongo</p>
-              <small>Developer</small>
+              <p class="mt-3 fw-bold text-white fs-4">Tayyib Gbongo</p>
+              <small>Frontend Developer</small>
             </div>
             <div>
               <img
@@ -199,7 +100,7 @@
                 src="./img/team2.png"
                 alt=""
               />
-              <p class="mt-3 fw-bold text-dark fs-4">John Oseni</p>
+              <p class="mt-3 fw-bold text-white fs-4">John Oseni</p>
               <small>Developer</small>
             </div>
             <div>
@@ -209,8 +110,8 @@
                 src="./img/team4.png"
                 alt=""
               />
-              <p class="mt-3 fw-bold text-dark fs-4">Ewin Igwebuike</p>
-              <small>Developer</small>
+              <p class="mt-3 fw-bold text-white fs-4">Ewin Igwebuike</p>
+              <small>Graphics & Ui Designer</small>
             </div>
             <div>
               <img
@@ -219,59 +120,23 @@
                 src="./img/team3.png"
                 alt=""
               />
-              <p class="mt-3 fw-bold text-dark fs-4">John Oseni</p>
-              <small>Developer</small>
+              <p class="mt-3 fw-bold text-white fs-4">John Oseni</p>
+              <small>BLockchain Engineer</small>
             </div>
             <div>
               <img
                 draggable="false"
                 class="w-100 rounded-3 mh-5"
-                src="./img/samuel.png"
+                src="./img/team5.png"
                 alt=""
               />
-              <p class="mt-3 fw-bold text-dark fs-4">Samuel Adeyemi</p>
-              <small>Developer</small>
+              <p class="mt-3 fw-bold text-white fs-4">Samuel Adeyemi</p>
+              <small>Frontend Developer</small>
             </div>
           </div>
         </div>
+ 
       </div>
-
-      <div class="mt-5 mb-5 pt-2 pb-3">
-        <div class="container">
-          <div class="row">
-            <div class="col-md-4 text-center">
-              <img src="./img/icon2.png" alt="Icon" />
-              <h4 class="text-dark mt-3 fw-bold">Blazing Fast Web Hosting</h4>
-              <small>
-                We Keep Your Web build Online 24x7x365. Downtime not only costs
-                you lost visitors but also damages your reputation and search
-                engine rankings
-              </small>
-            </div>
-
-            <div class="col-md-4 text-center">
-              <img src="./img/icon3.png" alt="Icon" />
-              <h4 class="text-dark mt-3 fw-bold">Free SSL Certificates</h4>
-              <small>
-                We Keep Your Web build Online 24x7x365. Downtime not only costs
-                you lost visitors but also damages your reputation and search
-                engine rankings.
-              </small>
-            </div>
-
-            <div class="col-md-4 text-center">
-              <img src="./img/icon4.png" alt="Icon" />
-              <h4 class="text-dark mt-3 fw-bold">24x7 Friendly Support</h4>
-              <small>
-                We Keep Your Web build Online 24x7x365. Downtime not only costs
-                you lost visitors but also damages your reputation and search
-                engine rankings.
-              </small>
-            </div>
-          </div>
-        </div>
-      </div>
-
       <div class="mt-5 pt-5 pb-5">
         <div class="container bg-primary rounded-3">
           <div class="card-body">
@@ -283,8 +148,8 @@
                   Projects
                 </h1>
                 <p class="text-white mt-5 text-light ep">
-                 A digital agency is a business you hire to outsource your digital marketing
-                 efforts, instead of handling in-house.
+                  A digital agency is a business you hire to outsource your digital marketing 
+                  efforts, instead of handling in-house.
                 </p>
 
                 <button
@@ -306,10 +171,63 @@
           </div>
         </div>
       </div>
+
+
+      <div class="container-fluid bg-primary mb-5">
+        <div class="p-5 ">
+        <h2 class="text-center text-white fw-bold">We Are Loved By Users And Clients<br> Worldwide</h2>
+         <div class=" d-flex flex-column flex-lg-row align-items-center justify-content-center">
+             <div class="card bg-dark mx-5 my-3" style="width: 20rem;">
+              <div class="card-body">
+              <p class="card-text text-white">Please do something for us who have interest but don't know where to start,as it seem so hard viewing from outside here</p>
+              <div class="d-flex">
+                <div>
+                     <img src="./img/team4.png" style="width: 50px;" class="rounded-circle mx-3" alt="avatar">
+                </div>
+
+              <span class="d-flex flex-column">
+              <h2 class="h6 text-white">Ronald Richard</h2>
+              <small>Ui UX Designer</small>
+              </span>
+                <span>
+                <i class="fa fa-star star-sm text-warning"></i>
+                <i class="fa fa-star star-sm text-warning"></i>
+                <i class="fa fa-star star-sm text-warning"></i>
+                <i class="fa fa-star star-sm text-warning"></i>
+                <i class="fa fa-star star-sm"></i>
+              </span>
+            </div>
+            </div>
+          </div>
+             <div class="card bg-dark" style="width: 20rem;">
+              <div class="card-body">
+              <p class="card-text text-white">Please do something for us who have interest but don't know where to start,as it seem so hard viewing from outside here</p>
+              <div class="d-flex">
+                <div>
+                  <img src="./img/team4.png" style="width: 50px;" class="rounded-circle mx-3" alt="avatar">
+                </div>
+              
+              <span class="d-flex flex-column">
+              <h2 class="h6 text-white">Ronald Richard</h2>
+              <small class="">Ui UX Designer</small>
+              </span>
+              <span>
+                <i class="fa fa-star star-sm text-warning"></i>
+                <i class="fa fa-star star-sm text-warning"></i>
+                <i class="fa fa-star star-sm text-warning"></i>
+                <i class="fa fa-star star-sm text-warning"></i>
+                <i class="fa fa-star star-sm"></i>
+              </span>
+            </div>
+            </div>
+          </div>
+         </div>
+      
+     </div>
     </div>
 
-    <!-- Footer -->
-    <footer class="bg-light text-lg-left">
+
+     <footer class="bg-light text-lg-left">
       <!-- Grid container -->
       <div class="container px-3 py-5">
         <!--Grid row-->
@@ -370,8 +288,6 @@
       </div>
       <!-- Copyright -->
     </footer>
-    <!-- Footer -->
-
     <script src="./js/mdb.min.js"></script>
     <script src="./js/jquery.min.js"></script>
     <script src="./js/owl.carousel.min.js"></script>
