--- a/index.html
+++ b/index.html
@@ -81,9 +81,8 @@
             </h1>
             <img
               draggable="false"
-              class="mt-2 mb-3 img-responsive"
+              class="mt-5 mb-5 img-responsive d-flex mx-md-0 mx-lg-0 mx-xl-auto"
               src="./img/line.png"
-              style="width: 350px"
             />
             <p class="text-dark">
               &copy;CODESPACE is a Platform that aims to build a community for
@@ -186,11 +185,29 @@
     <div class="bg-light">
       <div class="team pb-5 pt-5">
         <div class="container">
-          <p class="text-primary">Our Team</p>
-          <h1 class="ep fw-bold mb-5 text-dark">
-            Our Team of Designers <br />
-            and Developers
-          </h1>
+          <p class="text-light ep text-uppercase">Our Team</p>
+          <div class="d-lg-flex">
+            <h1 class="ep fw-bold mb-5 text-dark">
+              Our Team of Designers <br />
+              and Developers
+            </h1>
+
+            <div class="ms-lg-auto mb-5 ms-lg-5 owl-nav">
+              <img
+                class="customPrevBtn"
+                role="presentation"
+                style="height: auto; cursor: pointer"
+                src="./img/left_black.png"
+                alt=""
+              />
+              <img
+                class="customNextBtn"
+                style="height: auto; cursor: pointer"
+                src="./img/right_black.png"
+                alt=""
+              />
+            </div>
+          </div>
 
           <div class="owl-carousel teams">
             <div>
@@ -201,7 +218,7 @@
                 alt=""
               />
               <p class="mt-3 fw-bold text-dark fs-4 ep">John Oseni</p>
-              <small>Developer</small>
+              <p class="small" style="margin-top: -15px">Developer</p>
             </div>
             <div>
               <img
@@ -211,7 +228,7 @@
                 alt=""
               />
               <p class="mt-3 fw-bold text-dark fs-4 ep">John Oseni</p>
-              <small>Developer</small>
+              <p class="small" style="margin-top: -15px">Developer</p>
             </div>
             <div>
               <img
@@ -221,7 +238,7 @@
                 alt=""
               />
               <p class="mt-3 fw-bold text-dark fs-4 ep">John Oseni</p>
-              <small>Developer</small>
+              <p class="small" style="margin-top: -15px">Developer</p>
             </div>
             <div>
               <img
@@ -231,7 +248,7 @@
                 alt=""
               />
               <p class="mt-3 fw-bold text-dark fs-4 ep">John Oseni</p>
-              <small>Developer</small>
+              <p class="small" style="margin-top: -15px">Developer</p>
             </div>
             <div>
               <img
@@ -241,7 +258,7 @@
                 alt=""
               />
               <p class="mt-3 fw-bold text-dark fs-4 ep">Samuel Adeyemi</p>
-              <small>Developer</small>
+              <p class="small" style="margin-top: -15px">Developer</p>
             </div>
           </div>
         </div>
@@ -367,6 +384,105 @@
                 >
                   <div class="card-body p-5">
                     <p>
+                      Please do something for us who have interest but don't
+                      know where to start,as it seem so hard viewing from
+                      outside here
+                    </p>
+
+                    <div class="d-flex mt-3">
+                      <img
+                        style="width: 50px; height: 50px"
+                        src="./img/Picture.png"
+                        alt=""
+                      />
+
+                      <div class="ms-3">
+                        <p class="fw-bold small">Precious Solomon Kayili</p>
+                        <p class="small ep" style="margin-top: -15px">
+                          UI/UX Designer
+                        </p>
+                        <img
+                          src="./img/Gold Stars.png"
+                          style="margin-top: -15px"
+                          class="w-50"
+                        />
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <div
+                  class="card bg-dark text-white p-1"
+                  style="border-radius: 1.25rem; border-top-right-radius: 0px"
+                >
+                  <div class="card-body p-5">
+                    <p>
+                      Please do something for us who have interest but don't
+                      know where to start,as it seem so hard viewing from
+                      outside here
+                    </p>
+
+                    <div class="d-flex mt-3">
+                      <img
+                        style="width: 50px; height: 50px"
+                        src="./img/Picture.png"
+                        alt=""
+                      />
+
+                      <div class="ms-3">
+                        <p class="fw-bold small">Precious Solomon Kayili</p>
+                        <p class="small ep" style="margin-top: -15px">
+                          UI/UX Designer
+                        </p>
+                        <img
+                          src="./img/Gold Stars.png"
+                          style="margin-top: -15px"
+                          class="w-50"
+                        />
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <div
+                  class="card bg-dark text-white p-1"
+                  style="border-radius: 1.25rem; border-top-right-radius: 0px"
+                >
+                  <div class="card-body p-5">
+                    <p>
+                      Please do something for us who have interest but don't
+                      know where to start,as it seem so hard viewing from
+                      outside here
+                    </p>
+
+                    <div class="d-flex mt-3">
+                      <img
+                        style="width: 50px; height: 50px"
+                        src="./img/Picture.png"
+                        alt=""
+                      />
+
+                      <div class="ms-3">
+                        <p class="fw-bold small">Precious Solomon Kayili</p>
+                        <p class="small ep" style="margin-top: -15px">
+                          UI/UX Designer
+                        </p>
+                        <img
+                          src="./img/Gold Stars.png"
+                          style="margin-top: -15px"
+                          class="w-50"
+                        />
+                      </div>
+                    </div>
+                  </div>
+                </div>
+
+                <div
+                  class="card bg-dark text-white p-1"
+                  style="border-radius: 1.25rem; border-top-right-radius: 0px"
+                >
+                  <div class="card-body p-5">
+                    <p>
                       Exactly, be clear in your mind about your passions and
                       dreams, then it would be easy to pursue them.
                       <span class="text-primary fw-bold">Clinton Imaro</span>
@@ -426,21 +542,29 @@
                 style="justify-content: flex-end"
               >
                 <a href="#">
-                  <img draggable="false" src="./img/instagram.png" alt="" />
+                  <img draggable="false" src="./img/social1.png" alt="" />
                 </a>
                 <a href="#">
                   <img
                     draggable="false"
-                    class="ms-2"
-                    src="./img/youtube.png"
+                    class="ms-3"
+                    src="./img/social2.png"
                     alt=""
                   />
                 </a>
                 <a href="#">
                   <img
                     draggable="false"
-                    class="ms-2"
-                    src="./img/dribbble.png"
+                    class="ms-3"
+                    src="./img/social3.png"
+                    alt=""
+                  />
+                </a>
+                <a href="#">
+                  <img
+                    draggable="false"
+                    class="ms-3"
+                    src="./img/social4.png"
                     alt=""
                   />
                 </a>
@@ -463,7 +587,7 @@
       <div class="text-center my-auto p-3">
         <p class="text-dark">
           &copy; 2022 | All Right's Reserved by
-          <a class="text-dark" href="https://codesspace.in/">Code Space</a>
+          <a class="text-dark" href="/">Code Space</a>
         </p>
       </div>
       <!-- Copyright -->
@@ -477,57 +601,60 @@
       $(document).ready(function () {
         $(".testimonial").owlCarousel({
           responsiveClass: true,
+          autoplay: true,
+          autoplayHoverPause: true,
           margin: 20,
           nav: false,
           loop: true,
           responsive: {
             0: {
               items: 1,
-              nav: true,
             },
             600: {
               items: 1,
-              nav: true,
             },
             800: {
               items: 1,
-              nav: true,
             },
             1000: {
               items: 1,
-              nav: true,
             },
             1200: {
               items: 2,
-              nav: true,
             },
           },
         });
 
-        $(".teams").owlCarousel({
+        var teamsCarousel = $(".teams");
+
+        teamsCarousel.owlCarousel({
           responsiveClass: true,
           margin: 20,
           items: 4,
-          nav: false,
           loop: true,
           responsive: {
             0: {
               items: 1,
-              nav: true,
             },
             600: {
               items: 2,
-              nav: true,
             },
             800: {
               items: 3,
-              nav: true,
             },
             1200: {
               items: 4,
-              nav: true,
             },
           },
+        });
+
+        // Go to the next item
+        $(".customNextBtn").click(function () {
+          teamsCarousel.trigger("next.owl.carousel");
+        });
+        // Go to the previous item
+        $(".customPrevBtn").click(function () {
+          teamsCarousel.trigger("prev.owl.carousel");
         });
       });
     </script>
