--- a/index.html
+++ b/index.html
@@ -155,13 +155,15 @@
                 </div>
             </section>
             <!-- Intro Section  -->
-            <section class="intro-section pt-4">
-                <div class="row pt-5 pb-5">
-                    <div class="col-md-6 pt-5 mt-3 intro-text">
-                        <h2>We are changing the <br> Future With <span class="brand">Technology</span></h2>
-                        <div class="line-container ">
+            <section class="intro-section pt-md-4">
+                <div class="row pt-md-5 pb-5 g-5">
+                    <div class="col-md-6 pt-sm-3 pt-md-5 mt-sm-3 mt-md-5 intro-text">
+                        <h2>We are changing the <br> Future With&nbsp;<span class="line-and-text-container"><span
+                                    class="brand">Technology</span> <img src="Assets/img/icons/line.svg" alt=""
+                                    class="img-fluid line"></span></h2>
+                        <!-- <div class="line-container ">
                             <img src="Assets/img/icons/line.svg" alt="" class="img-fluid w-50 ">
-                        </div>
+                        </div> -->
                         <p class="pt-3">The world is not changed by people but by we <span class="brand">GenZ</span>.
                             Big things
                             require great collaboration
