--- a/index.html
+++ b/index.html
@@ -255,15 +255,15 @@
             <!-- Headline Section  -->
             <section class="headline">
                 <div class="text-container">
-                    <div class="title-and-link-container">
+                    <div class="title-and-link-container pb-3">
                         <h1>What is CodeSpace ?</h1>
                         <a href="" class="more">Want to see more...?</a>
                     </div>
-                    <p>Code Space is a tech brand that is focused on the technological advancement on <br
+                    <p class="pb-3">Code Space is a tech brand that is focused on the technological advancement on <br
                             class="br">Africa via her
                         array of projects that is meant to proffer solutions to problems</p>
                 </div>
-                <div class="row gap-3 flex-nowrap">
+                <div class="headline-grid row gap-3 flex-nowrap">
                     <div class="col-md-6 p-0 clinton-headline-container">
                         <img src="Assets/img/headline-img/clinton.png" class="w-responsive w-100 h-100 img-fluid"
                             alt="">
@@ -274,16 +274,24 @@
                     </div>
                     <div class="col-md-6">
                         <div class="row p-0 gap-3">
-                            <div class="col-md-12 p-0">
+                            <div class="col-md-12 p-0 building-future-headline">
                                 <img src="Assets/img/headline-img/future-build-img.png"
                                     class="w-responsive w-100 img-fluid" alt="">
+                                <h2>We are the future and we are ready to build it</h2>
 
                             </div>
-                            <div class="row p-0 m-auto gap-3 flex-nowrap">
-                                <div class="col-md-6 p-0"><img src="Assets/img/headline-img/oseni.png" alt=""
-                                        class="w-responsive w-100 img-fluid"></div>
-                                <div class="col-md-6 p-0"><img src="Assets/img/headline-img/precious.png" alt=""
-                                        class="w-responsive w-100 img-fluid"></div>
+                            <div class="row p-0 m-auto gap-2 flex-nowrap ">
+                                <div class="col-md-6 p-0 oseni-headline">
+                                    <img src="Assets/img/headline-img/oseni.png" alt=""
+                                        class="w-responsive w-100 img-fluid">
+                                    <h3>16-year-old tech prodigy john oseni is building a sustainable future</h3>
+                                </div>
+                                <div class="col-md-6 p-0 precious-kayili-headline"><img
+                                        src="Assets/img/headline-img/precious.png" alt=""
+                                        class="w-responsive w-100 img-fluid">
+                                    <h3>15-year-old precious is the creator of ridges an online platform that connects
+                                        the farmer directly to potential <br class="br"> buyers</h3>
+                                </div>
                             </div>
                         </div>
                     </div>
