--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <!-- Navbar  -->
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="/">Code Space</a>
+                <a class="navbar-brand  main-text" href="/">Code Space</a>
                 <button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <img src="Assets/img/icons/menu-bar.svg" alt="" class="navbar-toggler-icon">
@@ -33,19 +33,19 @@
                     <!-- Nav Links  -->
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link main-text active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./pages/about.html">About Us</a>
+                            <a class="nav-link main-text" href="/pages/about.html">About Us</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Community</a>
+                            <a class="nav-link main-text" href="#">Community</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Projects</a>
+                            <a class="nav-link main-text" href="#">Projects</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contact Us</a>
+                            <a class="nav-link  main-text" href="#">Contact Us</a>
                         </li>
                     </ul>
                 </div>
@@ -59,7 +59,7 @@
                 <div class="row">
                     <!-- Text Container  -->
                     <div class="col-md-5 pt-md-5 mt-md-5 pb-md-5 pb-2 showcase-text-container">
-                        <h1 class="showcase-title mb-4 mt-4">Rewriting the African Narrative through <span
+                        <h1 class="showcase-title mb-4 mt-4  main-text" >Rewriting the African Narrative through <span
                                 class="brand">Technology</span></h1>
                         <p class="mb-8 showcase-bio"><span class="brand text-uppercase">Codespace</span> is a Platform
                             that aims to
@@ -102,7 +102,7 @@
         <div class="container-fluid pt-5">
             <section class="team-section pt-5">
                 <h4 class="text-uppercase brand mb-2 ">Our team</h4>
-                <h2 class="mb-2">Team of Designers <br class="br"> and Developers</h2>
+                <h2 class="mb-2  main-text">Team of Designers <br class="br"> and Developers</h2>
                 <!-- Slider  -->
                 <div class="team-slider swiper mt-5 pt-2">
                     <div class="swiper-wrapper mb-3">
@@ -158,7 +158,7 @@
             <section class="intro-section pt-4">
                 <div class="row pt-5 pb-5">
                     <div class="col-md-6 pt-5 mt-3 intro-text">
-                        <h2>We are changing the <br> Future With <span class="brand">Technology</span></h2>
+                        <h2 class=" main-text">We are changing the <br> Future With <span class="brand">Technology</span></h2>
                         <div class="line-container ">
                             <img src="Assets/img/icons/line.svg" alt="" class="img-fluid w-50 ">
                         </div>
@@ -174,7 +174,7 @@
             </section>
             <!-- Team Projects Section  -->
             <section class="team-projects pt-lg-5">
-                <h1 class="team-projects-h1">
+                <h1 class="team-projects-h1  main-text">
                     Team Projects
                 </h1>
                 <p class="team-projects-bio-p text-center">CODESPACE is a Platform that aims to build a community for
