--- a/pages/about.html
+++ b/pages/about.html
@@ -34,7 +34,7 @@
         <!-- Navbar -->
 <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand text-white" href="/">Code Space</a>
+                <a class="navbar-brand text-white h5" href="/">Code Space</a>
                 <button class="navbar-toggler" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <img src="../Assets/img/icons/menu-bar.svg" alt="" class="navbar-toggler-icon">
